# Aurora-HLS

./: .gitattributes  .gitignore  .gitlab-ci.yml  Makefile  README.md  aurora_flow_recv_send_hw.cfg  aurora_flow_ring_hw.cfg  aurora_flow_send_recv_hw.cfg  aurora_flow_test_hw.cfg  aurora_flow_test_sw_emu.cfg  aurora_flow_test_sw_emu_loopback.cfg  aurora_flow_test_sw_emu_pair.cfg  aurora_flow_test_sw_emu_ring.cfg  aurora_hls_test_hw.cfg  aurora_hls_test_sw_emu.cfg  env.sh  host_aurora_flow_ring  host_aurora_flow_test
emulation/: CMakeLists.txt  README.md  env.sh
emulation/example/: CMakeLists.txt  README.md  collector.cpp  common_streams.h  kernels.h  main.cpp  vadd_kernel.cpp
emulation/include/: auroraemu.hpp
emulation/test/: CMakeLists.txt  README.md  test.cpp
eval/: data.csv  eval.ipynb  eval.jl  latency_over_frame_sizes.csv  latency_tests.csv  link_dwc_results.csv  nfc_tests.csv  plot.ipynb  resources.csv  simple_tests.csv  soft_reset_tests.csv  width_results.csv
hls/: dump.cpp  issue.cpp  recv.cpp  recv_send.cpp  send.cpp  send_recv.cpp
host/: Aurora.hpp  Configuration.hpp  Kernel.hpp  Results.hpp  host_aurora_flow_ring.cpp  host_aurora_flow_test.cpp  host_aurora_hls_test.cpp  host_check_channel.cpp
rtl/: aurora_flow.v.template.v  aurora_flow_configuration.v  aurora_flow_configuration_tb.v  aurora_flow_control_s_axi.v  aurora_flow_define.v  aurora_flow_io.v  aurora_flow_monitor.v  aurora_flow_monitor_tb.v  aurora_flow_nfc.v  aurora_flow_nfc_tb.v  aurora_flow_reset.v  aurora_hls.v.template.v  aurora_hls_configuration.v  aurora_hls_configuration_tb.v  aurora_hls_control_s_axi.v  aurora_hls_crc_counter.v  aurora_hls_crc_counter_tb.v  aurora_hls_io.v  aurora_hls_monitor.v  aurora_hls_monitor_tb.v  aurora_hls_nfc.v  aurora_hls_nfc_tb.v  aurora_hls_reset.v
scripts/: collect_all.sh  configure_loopback.sh  configure_pair.sh  configure_ring.sh  for_every_node.sh  print_available_nodes.sh  reset.sh  run_N1.sh  run_N1_loopback.sh  run_N1_over_all.sh  run_N1_over_framesizes.sh  run_N1_over_widths.sh  run_N1_pair.sh  run_N1_ring.sh  run_N2.sh  run_channel_check.sh  run_latency_test.sh  run_loopback.sh  run_nfc_test.sh  run_over_all.sh  run_over_all_configs.sh  run_pair.sh  run_pair_pressure.sh  run_ring.py  run_ring.sh  run_ring_template.sh  run_single_fpga.sh  synth.sh  synth_all.sh
scripts/2.14/: run_acl0.sh  run_acl1.sh  run_acl2.sh
scripts/2.15/: run_acl0.sh  run_acl1.sh  run_acl2.sh
scripts/2.16/: run_acl0.sh  run_acl1.sh  run_acl2.sh
tcl/: create_aurora_ip.tcl  create_axis_dwidth_converter_ip.tcl  create_fifo_ip.tcl  create_ila_crc_counter_ip.tcl  create_ila_nfc_ip.tcl  pack_kernel.tcl  run_configuration_tb.tcl  run_crc_counter_tb.tcl  run_monitor_tb.tcl  run_nfc_tb.tcl
xdc/: aurora_64b66b_0.xdc  aurora_64b66b_1.xdc
